--- a/index.html
+++ b/index.html
@@ -1,33 +1,20 @@
-﻿<!doctype html>
-
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-
-  <title>Sprint Challenge - Home</title>
-
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
-
+    <meta charset="utf-8">
+    <title>Sprint Challenge - Home</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
 </head>
-
 <body>
     <div class="container">
         <header>
-            <a href="#">
-                <img class="headerimg" src="img/lambda-black.png" alt="Lambda School Logo" />
-            </a>
-            <nav style="menu">
-                <a href="#">Home</a>
-                <a href="about.html">About</a>
-                <a href="#">Products</a>
-                <a href="#">Blog</a>
-                <a href="#">Contact</a>
+            <a href="#"><img alt="Lambda School Logo" class="headerimg" src="img/lambda-black.png"></a>
+            <nav class="menu">
+                <a href="#">Home</a> <a href="about.html">About</a> <a href="#">Products</a> <a href="#">Blog</a> <a href="#">Contact</a>
             </nav>
-
         </header>
-        <div class="masthead"><img src="img/jumbo.jpg" /></div>
-
+        <div class="masthead"><img src="img/jumbo.jpg"></div>
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
@@ -38,28 +25,42 @@
                 <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
             </div>
         </section>
-
         <section class="middle-content">
-
             <h2>Why Did It Have To Be Boxes...</h2>
-
             <div class="boxes">
-                <div class="teal box">Box 1</div>
-                <div class="gold box">Box 2</div>
-                <div class="cadetblue box">Box 3</div>
-                <div class="coral box">Box 4</div>
-                <div class="crimson box">Box 5</div>
-                <div class="forestgreen box">Box 6</div>
-                <div class="darkorchid box">Box 7</div>
-                <div class="hotpink box">Box 8</div>
-                <div class="indigo box">Box 9</div>
-                <div class="dodgerblue box">Box 10</div>
+                <div class="teal box">
+                    Box 1
+                </div>
+                <div class="gold box">
+                    Box 2
+                </div>
+                <div class="cadetblue box">
+                    Box 3
+                </div>
+                <div class="coral box">
+                    Box 4
+                </div>
+                <div class="crimson box">
+                    Box 5
+                </div>
+                <div class="forestgreen box">
+                    Box 6
+                </div>
+                <div class="darkorchid box">
+                    Box 7
+                </div>
+                <div class="hotpink box">
+                    Box 8
+                </div>
+                <div class="indigo box">
+                    Box 9
+                </div>
+                <div class="dodgerblue box">
+                    Box 10
+                </div>
             </div>
-
         </section>
-
         <section class="bottom-content">
-
             <div class="text-container">
                 <h2>That's</h2>
                 <p>Phasellus id dui id tortor tincidunt efficitur. Proin sed quam sed tellus vestibulum ultrices quis in nunc.</p>
@@ -72,18 +73,12 @@
                 <h2>Moon</h2>
                 <p>Phasellus id dui id tortor tincidunt efficitur. Proin sed quam sed tellus vestibulum ultrices quis in nunc.</p>
             </div>
-
         </section>
-
         <footer>
             <nav>
-                <a href="#">Home</a>
-                <a href="about.html">About</a>
-                <a href="#">Products</a>
-                <a href="#">Blog</a>
-                <a href="#">Contact</a>
+                <a href="#">Home</a> <a href="about.html">About</a> <a href="#">Products</a> <a href="#">Blog</a> <a href="#">Contact</a>
             </nav>
         </footer>
-    </div><!-- container -->        
+    </div><!-- container -->
 </body>
 </html>
